# aws-lambda-post-runner

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: create-release.yml
img/: overview.drawio
scripts/: entry.sh
src/: main.rs
